# cmake_test

./: .gitignore  README.md
demo1/: CMakeLists.txt  main.c
demo2/: CMakeLists.txt  main.c  math_func.c
demo3/: CMakeLists.txt  main.c
demo4/: CMakeLists.txt  main.c
demo4/math/: CMakeLists.txt
